{
  "helloWorld": "¡Hola Mundo!",
  "user": "Usuario",
  "password": "Contraseña",
  "plan": "Plan",
  "premium": "Premium",
  "menu_deportologo": "Agendar Sesión Deportólogo",
  "menu_ritmo": "Monitorea Ritmo Cardíaco",
  "menu_entrenamiento": "Plan Entrenamiento",
  "menu_eventos": "Eventos",
  "dep_titulo": "Cita Deportólogo",
  "dep_agendar": "Agendar Sesión",
  "dep_opcion": "Selecciona la opción",
  "dep_prensent": "Presencial",
  "dep_virtual": "Virtual",
  "dep_fecha": "Seleccione la fecha",
  "dep_guardar": "Guardar",
  "dep_exitoso": "Exitoso",
  "dep_exitoso_desc": "Sesión Agendada",
  "entr_titulo": "Plan de Entrenamiento",
  "entr_ciclismo": "Ciclismo",
  "entr_atletismo": "Atletismo",
  "entr_cals_activas": "Calorías \nActivas",
  "entr_cals": "Calorías",
  "entr_ftp": "FTP",
  "entr_max":"VO2 Max",
  "entr_start_session":"Iniciar sesión",
  "entr_end_session":"Finalizar sesión",
  "entr_plan_nutricional":"Plan Nutricional",
  "entr_plan_recuperacion":"Plan de Recuperación",
  "entr_add_title": "Agregar entrenamiento",
  "entr_add_nombre": "Nombre del entrenamiento",
  "entr_add_ejercicios": "Ejercicios",
  "entr_add_pierna": "Pierna",
  "entr_add_abdomen": "Abdomen",
  "entr_add_lumbar": "Lumbar",
  "entr_add_cardio": "Cardio",
  "entr_add_reps": "Repeticiones",
  "perfil_title": "Tablero Control",
  "perfil_proceso": "Proceso",
  "perfil_sesiones": "Sesiones: ",
  "perfil_ultimomes": "En el ultimo mes",
  "perfil_eventoscomp": "Entrenamientos completados",
  "perfil_eventosasis": "Eventos asistidos",
  "perfil_avance": "Avance",
  "perfil_peso": "Pesos",
  "perfil_message": "Increible, sigue así!",
  "plan_premium": "Plan Premium",
  "plan_basico": "Plan Basico",
  "plan_medio": "Plan Intermedio",
  "idioma": "Selecciona tu Idioma",
  "dep_exitoso_Aceptar": "Aceptar",
  "sign_in": "Ingresar",

  "heart_start": "Iniciar",
  "heart_stop": "Finalizar",  

  "entr_plan_nutricional_title": "Plan Nutricional",
  "entr_plan_nutricional_protein": "Proteina",
  "entr_plan_nutricional_vegetables": "Vegetales",
  "entr_plan_nutricional_fats": "Grasas Buenas"

}